fix: Add robust CORS support - high-priority filter, actuator CORS, and wildcard headers